welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: not found: value avnce
	avnce()
        ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
for (n <- 1 to 6) {recule()}
       ^